--- a/lab-python-error-handling.ipynb
+++ b/lab-python-error-handling.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "25d7736c-ba17-4aff-b6bb-66eba20fbf4e",
+   "id": "40485476",
    "metadata": {},
    "source": [
-    "# Lab | Error Handling"
+    "# Lab | Error Handling\n",
+    "---"
    ]
   },
   {
@@ -18,8 +19,8 @@
     "The implementation of your code for managing customer orders assumes that the user will always enter a valid input. \n",
     "\n",
     "For example, we could modify the `initialize_inventory` function to include error handling.\n",
-    "   - If the user enters an invalid quantity (e.g., a negative value or a non-numeric value), display an error message and ask them to re-enter the quantity for that product.\n",
-    "   - Use a try-except block to handle the error and continue prompting the user until a valid quantity is entered.\n",
+    "   - **If the user enters an invalid quantity** (e.g., a negative value or a non-numeric value), **display an error message** and **ask them to re-enter** the quantity for that product.\n",
+    "   - Use a **``try-except``** block to handle the error and continue prompting the user **until a valid quantity is entered**.\n",
     "\n",
     "```python\n",
     "# Step 1: Define the function for initializing the inventory with error handling\n",
@@ -74,6 +75,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "549c919f",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Solved Lab | Error Handling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "399e7e87",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### STEP 1\n",
+    "modify the `initialize_inventory` function to include error handling.\n",
+    "   - **If the user enters an invalid quantity** (e.g., a negative value or a non-numeric value), **display an error message** and **ask them to re-enter** the quantity for that product.\n",
+    "   - Use a **``try-except``** block to handle the error and continue prompting the user **until a valid quantity is entered**."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "4f673274",
@@ -116,12 +138,183 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7711e9ff",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### STEP 2\n",
+    "2. Modify the `calculate_total_price` function to include error handling.\n",
+    "   \n",
+    "   - If the user enters an invalid price (e.g., a negative value or a non-numeric value),\n",
+    "   - display an error message and ask them to re-enter the price for that product.\n",
+    "   \n",
+    "   - Use a try-except block to handle the error and continue prompting the user until a valid price is entered."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83d62dfe",
+   "id": "1136ebce",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def calculate_total_price(products):\n",
+    "    \"\"\"Calculate total price with error handling for invalid price inputs\"\"\"\n",
+    "    total_price = 0.0\n",
+    "    \n",
+    "    for product in products:\n",
+    "        while True:\n",
+    "            try:\n",
+    "                price = float(input(f\"Enter the price for {product}: $\"))\n",
+    "                if price < 0:\n",
+    "                    print(\"Error: Price cannot be negative. Please enter a valid price.\")\n",
+    "                    continue\n",
+    "                total_price += price\n",
+    "                break  # Valid price entered, move to next product\n",
+    "            except ValueError:\n",
+    "                print(\"Error: Invalid price. Please enter a numeric value.\")\n",
+    "    \n",
+    "    return total_price"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63b63ca9",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### STEP 3\n",
+    "3. Modify the `get_customer_orders` function to include error handling.\n",
+    "   - If the user enters an invalid number of orders (e.g., a negative value or a non-numeric value), \n",
+    "   - display an error message and ask them to re-enter the number of orders.\n",
+    "   - If the user enters an invalid product name (e.g., a product name that is not in the inventory), \n",
+    "   - or that doesn't have stock available, display an error message and ask them to re-enter the product name. \n",
+    "   - *Hint: you will need to pass inventory as a parameter*\n",
+    "   - Use a try-except block to handle the error and continue prompting the user until a valid product name is entered.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae63c5c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_customer_orders(inventory):\n",
+    "    \"\"\"Get customer orders with full error handling for quantity and product validation\"\"\"\n",
+    "    customer_orders = []\n",
+    "    \n",
+    "    # Validate number of orders\n",
+    "    while True:\n",
+    "        try:\n",
+    "            num_orders = int(input(\"Enter the number of orders: \"))\n",
+    "            if num_orders < 0:\n",
+    "                print(\"Error: Number of orders cannot be negative. Please try again.\")\n",
+    "                continue\n",
+    "            break\n",
+    "        except ValueError:\n",
+    "            print(\"Error: Invalid number. Please enter a whole number.\")\n",
+    "    \n",
+    "    # Get each order with product validation\n",
+    "    for _ in range(num_orders):\n",
+    "        while True:\n",
+    "            product = input(\"Enter the product name: \").strip()\n",
+    "            if product not in inventory:\n",
+    "                print(f\"Error: '{product}' not in inventory. Available: {list(inventory.keys())}\")\n",
+    "                continue\n",
+    "            if inventory[product] <= 0:\n",
+    "                print(f\"Error: '{product}' is out of stock.\")\n",
+    "                continue\n",
+    "            customer_orders.append(product)\n",
+    "            break\n",
+    "    \n",
+    "    return customer_orders\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f55ac6e6",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### STEP 4\n",
+    "4. Test your code by running the program and deliberately entering invalid quantities and product names. \n",
+    "- Make sure the error handling mechanism works as expected."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e342261e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialize_inventory(products):\n",
+    "    \"\"\"Initialize inventory with error handling for quantities\"\"\"\n",
+    "    inventory = {}\n",
+    "    for product in products:\n",
+    "        while True:\n",
+    "            try:\n",
+    "                quantity = int(input(f\"Enter quantity for {product}: \"))\n",
+    "                if quantity < 0:\n",
+    "                    print(\"Error: Quantity cannot be negative.\")\n",
+    "                    continue\n",
+    "                inventory[product] = quantity\n",
+    "                break\n",
+    "            except ValueError:\n",
+    "                print(\"Error: Enter a whole number.\")\n",
+    "    return inventory\n",
+    "\n",
+    "def get_customer_orders(inventory):\n",
+    "    customer_orders = []\n",
+    "    while True:\n",
+    "        try:\n",
+    "            num_orders = int(input(\"Enter number of orders: \"))\n",
+    "            if num_orders < 0:\n",
+    "                print(\"Error: Number of orders cannot be negative.\")\n",
+    "                continue\n",
+    "            break\n",
+    "        except ValueError:\n",
+    "            print(\"Error: Enter a whole number.\")\n",
+    "    \n",
+    "    for _ in range(num_orders):\n",
+    "        while True:\n",
+    "            product = input(\"Enter product name: \").strip()\n",
+    "            if product not in inventory:\n",
+    "                print(f\"Error: '{product}' not in inventory. Available: {list(inventory.keys())}\")\n",
+    "                continue\n",
+    "            if inventory[product] <= 0:\n",
+    "                print(f\"Error: '{product}' out of stock.\")\n",
+    "                continue\n",
+    "            customer_orders.append(product)\n",
+    "            break\n",
+    "    return customer_orders\n",
+    "\n",
+    "def calculate_total_price(products):\n",
+    "    total_price = 0.0\n",
+    "    for product in products:\n",
+    "        while True:\n",
+    "            try:\n",
+    "                price = float(input(f\"Enter price for {product}: $\"))\n",
+    "                if price < 0:\n",
+    "                    print(\"Error: Price cannot be negative.\")\n",
+    "                    continue\n",
+    "                total_price += price\n",
+    "                break\n",
+    "            except ValueError:\n",
+    "                print(\"Error: Enter numeric value.\")\n",
+    "    return total_price\n",
+    "\n",
+    "# Main program\n",
+    "if __name__ == \"__main__\":\n",
+    "    products = [\"Chocolate Bar\", \"Truffle Box\", \"Candy Cane\"]\n",
+    "    inventory = initialize_inventory(products)\n",
+    "    orders = get_customer_orders(inventory)\n",
+    "    total = calculate_total_price(orders)\n",
+    "    print(f\"\\nFinal order: {orders}\")\n",
+    "    print(f\"Total price: ${total:.2f}\")[conversation_history:6]\n"
+   ]
   }
  ],
  "metadata": {
