--- a/lab-python-error-handling.ipynb
+++ b/lab-python-error-handling.ipynb
@@ -248,7 +248,26 @@
    "execution_count": null,
    "id": "e342261e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: Enter a whole number.\n",
+      "Error: Enter a whole number.\n",
+      "Error: 'kjlhkjh' not in inventory. Available: ['Chocolate Bar', 'Truffle Box', 'Candy Cane']\n",
+      "Error: 'chocolate bar' not in inventory. Available: ['Chocolate Bar', 'Truffle Box', 'Candy Cane']\n",
+      "Error: 'book' not in inventory. Available: ['Chocolate Bar', 'Truffle Box', 'Candy Cane']\n",
+      "Error: 'Chocolate bar' not in inventory. Available: ['Chocolate Bar', 'Truffle Box', 'Candy Cane']\n",
+      "Error: 'aa' not in inventory. Available: ['Chocolate Bar', 'Truffle Box', 'Candy Cane']\n",
+      "Error: 'aa' not in inventory. Available: ['Chocolate Bar', 'Truffle Box', 'Candy Cane']\n",
+      "Error: 'a' not in inventory. Available: ['Chocolate Bar', 'Truffle Box', 'Candy Cane']\n",
+      "Error: 'a' not in inventory. Available: ['Chocolate Bar', 'Truffle Box', 'Candy Cane']\n",
+      "Error: '15' not in inventory. Available: ['Chocolate Bar', 'Truffle Box', 'Candy Cane']\n",
+      "Error: '1564+' not in inventory. Available: ['Chocolate Bar', 'Truffle Box', 'Candy Cane']\n"
+     ]
+    }
+   ],
    "source": [
     "def initialize_inventory(products):\n",
     "    \"\"\"Initialize inventory with error handling for quantities\"\"\"\n",
@@ -314,6 +333,16 @@
     "    total = calculate_total_price(orders)\n",
     "    print(f\"\\nFinal order: {orders}\")\n",
     "    print(f\"Total price: ${total:.2f}\")[conversation_history:6]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f4a0881",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "3"
    ]
   }
  ],
