--- a/lab-python-error-handling.ipynb
+++ b/lab-python-error-handling.ipynb
@@ -187,11 +187,11 @@
     "### STEP 3\n",
     "3. Modify the `get_customer_orders` function to include error handling.\n",
     "   - If the user enters an invalid number of orders (e.g., a negative value or a non-numeric value), \n",
-    "   - display an error message and ask them to re-enter the number of orders.\n",
-    "   - If the user enters an invalid product name (e.g., a product name that is not in the inventory), \n",
-    "   - or that doesn't have stock available, display an error message and ask them to re-enter the product name. \n",
-    "   - *Hint: you will need to pass inventory as a parameter*\n",
-    "   - Use a try-except block to handle the error and continue prompting the user until a valid product name is entered.\n"
+    "      - display an error message and ask them to re-enter the number of orders.\n",
+    "   - If the user enters an invalid product name (e.g., a product name that is not in the inventory), or that doesn't have stock available, \n",
+    "      - display an error message and ask them to re-enter the product name. \n",
+    "   - *Hint*: you will need to pass inventory as a parameter*\n",
+    "   - Use a `try-except` block to handle the error and continue prompting the user until a valid product name is entered.\n"
    ]
   },
   {
