--- a/lab-python-error-handling.ipynb
+++ b/lab-python-error-handling.ipynb
@@ -80,6 +80,7 @@
    "metadata": {},
    "source": [
     "---\n",
+    "---\n",
     "# Solved Lab | Error Handling"
    ]
   },
@@ -97,44 +98,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4f673274",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid input: invalid literal for int() with base 10: 'a'. Please enter a non-negative integer.\n",
+      "Invalid input: invalid literal for int() with base 10: 'f'. Please enter a non-negative integer.\n",
+      "Invalid input: invalid literal for int() with base 10: 'g'. Please enter a non-negative integer.\n",
+      "Invalid input: invalid literal for int() with base 10: 'apple'. Please enter a non-negative integer.\n",
+      "Invalid input: invalid literal for int() with base 10: 'Apple'. Please enter a non-negative integer.\n",
+      "Invalid input: invalid literal for int() with base 10: 'Apples'. Please enter a non-negative integer.\n",
+      "Invalid input: invalid literal for int() with base 10: 'Cake'. Please enter a non-negative integer.\n",
+      "Invalid input: invalid literal for int() with base 10: ''. Please enter a non-negative integer.\n",
+      "Invalid input: invalid literal for int() with base 10: ''. Please enter a non-negative integer.\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 1: Define the function for initializing the inventory with error handling\n",
     "def initialize_inventory(products):\n",
+    "    \"\"\"\n",
+    "    Initialize inventory quantities for a list of products.\n",
+    "    Ensures that the user enters valid non-negative integers.\n",
+    "    \n",
+    "    Args:\n",
+    "        products (list): List of product names.\n",
+    "    \n",
+    "    Returns:\n",
+    "        dict: Dictionary with product names as keys and quantities as values.\n",
+    "    \"\"\"\n",
     "    inventory = {}\n",
+    "    \n",
     "    for product in products:\n",
-    "        valid_quantity = False\n",
-    "        while not valid_quantity:\n",
+    "        while True:\n",
     "            try:\n",
-    "                quantity = int(input(f\"Enter the quantity of {product}s available: \"))\n",
+    "                # Ask the user for quantity\n",
+    "                quantity = input(f\"Enter quantity for {product}: \")\n",
+    "                \n",
+    "                # Convert input to integer\n",
+    "                quantity = int(quantity)\n",
+    "                \n",
+    "                # Check for negative values\n",
     "                if quantity < 0:\n",
-    "                    raise ValueError(\"Invalid quantity! Please enter a non-negative value.\")\n",
-    "                valid_quantity = True\n",
-    "            except ValueError as error:\n",
-    "                print(f\"Error: {error}\")\n",
-    "        inventory[product] = quantity\n",
+    "                    raise ValueError(\"Quantity cannot be negative.\")\n",
+    "                \n",
+    "                # Valid quantity, store it and break the loop\n",
+    "                inventory[product] = quantity\n",
+    "                break\n",
+    "            \n",
+    "            except ValueError as e:\n",
+    "                # Handle non-numeric or negative inputs\n",
+    "                print(f\"Invalid input: {e}. Please enter a non-negative integer.\")\n",
+    "    \n",
     "    return inventory\n",
     "\n",
-    "# Or, in another way:\n",
-    "\n",
-    "def initialize_inventory(products):\n",
-    "    inventory = {}\n",
-    "    for product in products:\n",
-    "        valid_input = False\n",
-    "        while not valid_input:\n",
-    "            try:\n",
-    "                quantity = int(input(f\"Enter the quantity of {product}s available: \"))\n",
-    "                if quantity >= 0:\n",
-    "                    inventory[product] = quantity\n",
-    "                    valid_input = True\n",
-    "                else:\n",
-    "                    print(\"Quantity cannot be negative. Please enter a valid quantity.\")\n",
-    "            except ValueError:\n",
-    "                print(\"Invalid input. Please enter a valid quantity.\")\n",
-    "    return inventory"
+    "# Test the function:\n",
+    "products_list = [\"Apples\", \"Bananas\", \"Oranges\"]\n",
+    "inventory = initialize_inventory(products_list)\n",
+    "print(\"Inventory initialized:\", inventory)\n"
    ]
   },
   {
@@ -154,28 +179,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1136ebce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid input: could not convert string to float: 'a'. Please enter a non-negative number.\n",
+      "Total price: $45.00\n"
+     ]
+    }
+   ],
    "source": [
     "def calculate_total_price(products):\n",
-    "    \"\"\"Calculate total price with error handling for invalid price inputs\"\"\"\n",
+    "    \"\"\"\n",
+    "    Ask the user to enter the price for each product and calculate the total price.\n",
+    "    Ensures valid, non-negative numeric input.\n",
+    "\n",
+    "    Args:\n",
+    "        products (list): List of product names.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: Total price of all products.\n",
+    "    \"\"\"\n",
     "    total_price = 0.0\n",
     "    \n",
     "    for product in products:\n",
     "        while True:\n",
     "            try:\n",
-    "                price = float(input(f\"Enter the price for {product}: $\"))\n",
+    "                # Ask user for the price\n",
+    "                price = input(f\"Enter price for {product}: \")\n",
+    "                \n",
+    "                # Convert input to float\n",
+    "                price = float(price)\n",
+    "                \n",
+    "                # Check for negative price\n",
     "                if price < 0:\n",
-    "                    print(\"Error: Price cannot be negative. Please enter a valid price.\")\n",
-    "                    continue\n",
+    "                    raise ValueError(\"Price cannot be negative.\")\n",
+    "                \n",
+    "                # Valid price, add to total and break loop\n",
     "                total_price += price\n",
-    "                break  # Valid price entered, move to next product\n",
-    "            except ValueError:\n",
-    "                print(\"Error: Invalid price. Please enter a numeric value.\")\n",
+    "                break\n",
+    "            \n",
+    "            except ValueError as e:\n",
+    "                print(f\"Invalid input: {e}. Please enter a non-negative number.\")\n",
     "    \n",
-    "    return total_price"
+    "    return total_price\n",
+    "\n",
+    "# Example usage:\n",
+    "products_list = [\"Apples\", \"Bananas\", \"Oranges\"]\n",
+    "total = calculate_total_price(products_list)\n",
+    "print(f\"Total price: ${total:.2f}\")\n"
    ]
   },
   {
@@ -202,34 +258,72 @@
    "outputs": [],
    "source": [
     "def get_customer_orders(inventory):\n",
-    "    \"\"\"Get customer orders with full error handling for quantity and product validation\"\"\"\n",
-    "    customer_orders = []\n",
-    "    \n",
-    "    # Validate number of orders\n",
+    "    \"\"\"\n",
+    "    Ask the user for their orders, including quantity and product name.\n",
+    "    Validates:\n",
+    "      - Number of orders (non-negative integer)\n",
+    "      - Product exists in inventory\n",
+    "      - Product has available stock\n",
+    "\n",
+    "    Args:\n",
+    "        inventory (dict): Dictionary of product names and available quantities\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: Customer orders with product names and ordered quantities\n",
+    "    \"\"\"\n",
+    "    orders = {}\n",
+    "\n",
+    "    print(\"\\nEnter your orders:\")\n",
+    "\n",
     "    while True:\n",
     "        try:\n",
-    "            num_orders = int(input(\"Enter the number of orders: \"))\n",
+    "            num_orders = input(\"How many different products do you want to order? \")\n",
+    "            num_orders = int(num_orders)\n",
     "            if num_orders < 0:\n",
-    "                print(\"Error: Number of orders cannot be negative. Please try again.\")\n",
-    "                continue\n",
+    "                raise ValueError(\"Number of orders cannot be negative.\")\n",
     "            break\n",
-    "        except ValueError:\n",
-    "            print(\"Error: Invalid number. Please enter a whole number.\")\n",
-    "    \n",
-    "    # Get each order with product validation\n",
-    "    for _ in range(num_orders):\n",
+    "        except ValueError as e:\n",
+    "            print(f\"Invalid input: {e}. Please enter a non-negative integer.\")\n",
+    "\n",
+    "    for i in range(num_orders):\n",
     "        while True:\n",
-    "            product = input(\"Enter the product name: \").strip()\n",
-    "            if product not in inventory:\n",
-    "                print(f\"Error: '{product}' not in inventory. Available: {list(inventory.keys())}\")\n",
+    "            product_name = input(f\"Enter product name for order #{i+1}: \").strip()\n",
+    "            \n",
+    "            # Check if product exists in inventory\n",
+    "            if product_name not in inventory:\n",
+    "                print(\"Invalid product name. Please choose a product from the inventory.\")\n",
     "                continue\n",
-    "            if inventory[product] <= 0:\n",
-    "                print(f\"Error: '{product}' is out of stock.\")\n",
+    "            \n",
+    "            # Check if product has stock available\n",
+    "            if inventory[product_name] == 0:\n",
+    "                print(f\"Sorry, {product_name} is out of stock. Please choose another product.\")\n",
     "                continue\n",
-    "            customer_orders.append(product)\n",
+    "            \n",
+    "            # Ask for quantity\n",
+    "            while True:\n",
+    "                try:\n",
+    "                    quantity = input(f\"Enter quantity for {product_name}: \")\n",
+    "                    quantity = int(quantity)\n",
+    "                    if quantity < 0:\n",
+    "                        raise ValueError(\"Quantity cannot be negative.\")\n",
+    "                    if quantity > inventory[product_name]:\n",
+    "                        raise ValueError(f\"Only {inventory[product_name]} units of {product_name} available.\")\n",
+    "                    break\n",
+    "                except ValueError as e:\n",
+    "                    print(f\"Invalid input: {e}. Please try again.\")\n",
+    "            \n",
+    "            # Save order and reduce inventory\n",
+    "            orders[product_name] = quantity\n",
+    "            inventory[product_name] -= quantity\n",
     "            break\n",
-    "    \n",
-    "    return customer_orders\n"
+    "\n",
+    "    return orders\n",
+    "\n",
+    "# Example usage\n",
+    "inventory = {\"Apples\": 10, \"Bananas\": 5, \"Oranges\": 8}\n",
+    "customer_orders = get_customer_orders(inventory)\n",
+    "print(\"\\nCustomer Orders:\", customer_orders)\n",
+    "print(\"Updated Inventory:\", inventory)\n"
    ]
   },
   {
@@ -255,16 +349,14 @@
      "text": [
       "Error: Enter a whole number.\n",
       "Error: Enter a whole number.\n",
-      "Error: 'kjlhkjh' not in inventory. Available: ['Chocolate Bar', 'Truffle Box', 'Candy Cane']\n",
+      "Error: Enter a whole number.\n",
+      "Error: Enter a whole number.\n",
+      "Error: Enter a whole number.\n",
+      "Error: Enter a whole number.\n",
+      "Error: 'ddd' not in inventory. Available: ['Chocolate Bar', 'Truffle Box', 'Candy Cane']\n",
       "Error: 'chocolate bar' not in inventory. Available: ['Chocolate Bar', 'Truffle Box', 'Candy Cane']\n",
-      "Error: 'book' not in inventory. Available: ['Chocolate Bar', 'Truffle Box', 'Candy Cane']\n",
-      "Error: 'Chocolate bar' not in inventory. Available: ['Chocolate Bar', 'Truffle Box', 'Candy Cane']\n",
-      "Error: 'aa' not in inventory. Available: ['Chocolate Bar', 'Truffle Box', 'Candy Cane']\n",
-      "Error: 'aa' not in inventory. Available: ['Chocolate Bar', 'Truffle Box', 'Candy Cane']\n",
-      "Error: 'a' not in inventory. Available: ['Chocolate Bar', 'Truffle Box', 'Candy Cane']\n",
-      "Error: 'a' not in inventory. Available: ['Chocolate Bar', 'Truffle Box', 'Candy Cane']\n",
-      "Error: '15' not in inventory. Available: ['Chocolate Bar', 'Truffle Box', 'Candy Cane']\n",
-      "Error: '1564+' not in inventory. Available: ['Chocolate Bar', 'Truffle Box', 'Candy Cane']\n"
+      "Error: 'hehe' not in inventory. Available: ['Chocolate Bar', 'Truffle Box', 'Candy Cane']\n",
+      "Error: 'aa' not in inventory. Available: ['Chocolate Bar', 'Truffle Box', 'Candy Cane']\n"
      ]
     }
    ],
